# substrate-ethereum-old

./: README.md
chain-bridge/: .env  Cargo.toml
chain-bridge/src/: config.rs  main.rs  substrate_handler.rs
chain-frontend/app/: package-lock.json  package.json
chain-frontend/app/src/: App.js  env.ts  index.html  index.tsx
chain-frontend/app/src/abi/: Dai.json
chain-frontend/app/src/api/: index.ts
chain-frontend/app/src/api/callPolkaApi/: fromResponse.ts  index.ts  toRequest.ts  types.ts
chain-frontend/app/src/components/Address/: index.tsx
chain-frontend/app/src/components/App/: index.tsx
chain-frontend/app/src/components/Balance/: index.tsx
chain-frontend/app/src/components/EthereumToSubstrate/: index.tsx
chain-frontend/app/src/components/SubstrateToEthereum/: SendingForm.tsx  index.tsx
chain-frontend/app/src/components/context/: api.ts
chain-frontend/app/src/util/: getContractData$.ts  getErrorMsg.ts  toBaseUnit.ts
ethereum-contract/: truffle-config.js
ethereum-contract/contracts/: Dai.sol
substrate-chain/: Cargo.toml
substrate-chain/runtime/: Cargo.toml
substrate-chain/runtime/src/: ft.rs  lib.rs
substrate-chain/src/: main.rs
substrate-chain/substrate-nft/runtime/: Cargo.toml
substrate-chain/substrate-nft/runtime/src/: lib.rs  nft.rs
substrate-chain/substrate-nft/runtime/wasm/: Cargo.toml
substrate-external/substrate-watcher/: go.mod
substrate-front-end/app/: package.json
substrate-monitoring/go-substrate-rpc-client/rpc/state/: get_storage_hash.go
substrate-monitoring/substrate-watcher/: main.go  monitoring
(+7 files in other folders)
